--- a/package.json
+++ b/package.json
@@ -4,20 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
+    "test": "jest",
+    "build": "npx tsc -p tsconfig.build.json",
     "go": "node dist/index.js",
     "bg": "npm run build && npm run go"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testMatch": ["**/*.test.ts"]
+  },
   "dependencies": {
     "csv-parse": "^5.5.5",
     "figlet": "^1.7.0"
   },
   "devDependencies": {
     "@types/figlet": "^1.5.8",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
